[gd_scene load_steps=8 format=3 uid="uid://bes4hhe47cbc8"]

[ext_resource type="Texture2D" uid="uid://deoc0jkea37e6" path="res://assets/card_base.png" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://bqis4o3dl5846" path="res://scripts/Card.gd" id="1_jyhfs"]
[ext_resource type="Texture2D" uid="uid://b1rltmymv22ba" path="res://assets/mana_slot.png" id="2_sugp2"]
[ext_resource type="Texture2D" uid="uid://b80asm3mqli1e" path="res://assets/defend_card_image.png" id="3_sugp2"]

[sub_resource type="LabelSettings" id="LabelSettings_jyhfs"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_tbgi4"]
font_size = 32
font_color = Color(0.472577, 0, 0.148383, 1)
outline_size = 2
shadow_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_tefeu"]
line_spacing = 1.0
font_size = 32
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="Card" type="Node2D"]
script = ExtResource("1_jyhfs")

[node name="CardBase" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_0wfyh")

[node name="CostDisp" type="Node2D" parent="."]
position = Vector2(143, -238)
scale = Vector2(4, 4)

[node name="Mana" type="Sprite2D" parent="CostDisp"]
texture = ExtResource("2_sugp2")

[node name="Costlbl" type="Label" parent="CostDisp"]
offset_left = -1.75
offset_top = -6.0
offset_right = 38.25
offset_bottom = 39.0
scale = Vector2(0.25, 0.25)
text = "1"
label_settings = SubResource("LabelSettings_jyhfs")

[node name="CardName" type="Node2D" parent="."]
scale = Vector2(2, 2)

[node name="Namelbl" type="Label" parent="CardName"]
offset_left = -116.0
offset_top = -119.0
offset_right = 114.0
offset_bottom = -31.0
text = "Card Name"
label_settings = SubResource("LabelSettings_tbgi4")
horizontal_alignment = 1

[node name="CardImage" type="Node2D" parent="."]

[node name="CardImageSprite" type="Sprite2D" parent="CardImage"]
position = Vector2(0, -62)
scale = Vector2(4, 4)
texture = ExtResource("3_sugp2")

[node name="CardDescription" type="Node2D" parent="."]

[node name="Desclbl" type="Label" parent="CardDescription"]
offset_left = -136.0
offset_top = 39.0
offset_right = 81.0
offset_bottom = 179.0
scale = Vector2(1.25, 1.25)
text = "Card Desc"
label_settings = SubResource("LabelSettings_tefeu")
horizontal_alignment = 1
autowrap_mode = 3
